// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtworkCaption snapshot renders a classic caption properly 1`] = `
.c0 {
  color: black60;
}

.c1 {
  color: black60;
  font-size: size4;
  line-height: body;
  font-weight: normal;
  font-family: serif;
  color: black60;
  margin-top: 10px;
  display: block;
}

.c1 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .c2 {
  margin-right: 0;
  color: inherit;
}

.c1 .c2::after {
  content: ", ";
}

.c1 .title {
  font-style: italic;
}

@media (min-width:) {
  .c1 {
    font-size: size3;
    line-height: body;
    font-weight: normal;
    font-family: serif;
    color: black60;
  }
}

<div
  className="c0"
  color="black60"
>
  <div
    className="display-artwork__caption c1"
    color="black60"
    fontFamily="sans"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<span><strong class=\\"c2 ccbsAj\\"><span class=\\"name\\">Fernando Botero</span></strong><span class=\\"title\\">Nude on the Beach</span><span>, </span><span class=\\"date\\">2000</span>. Gary Nader</span>",
        }
      }
    />
  </div>
</div>
`;

exports[`ArtworkCaption snapshot renders a fullscreen caption properly 1`] = `
.c0 {
  color: black60;
}

.c3 {
  margin-right: 30px;
  color: #000;
}

.c1 {
  font-size: size4;
  line-height: body;
  font-weight: normal;
  font-family: sans;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .title,
.c1 .title a {
  font-style: italic;
}

@media (min-width:) {
  .c1 {
    font-size: size3;
    line-height: body;
    font-weight: normal;
    font-family: sans;
  }
}

@media (max-width:720px) {
  .c1 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:720px) {
  .c2.artist-name {
    margin-bottom: 5px;
  }
}

<div
  className="c0"
  color="black60"
>
  <div
    className="c1"
    fontFamily="sans"
  >
    <div
      className="c2"
    >
      <strong
        className="c3"
      >
        <span
          className="name"
        >
          Fernando Botero
        </span>
      </strong>
    </div>
    <div>
      <div
        className="c2"
      >
        <span
          className="title"
        >
          Nude on the Beach
        </span>
        <span>
          , 
        </span>
        <span
          className="date"
        >
          2000
        </span>
      </div>
      <div
        className="c2"
      >
        Gary Nader
        <span>
          . 
        </span>
        <span
          className="credit"
        >
          Courtesy of Gary Nader
        </span>
      </div>
      <div
        className="c2"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`ArtworkCaption snapshot renders a standard caption properly 1`] = `
.c0 {
  color: black60;
}

.c3 {
  margin-right: 30px;
  color: #000;
}

.c1 {
  color: black60;
  font-size: size4;
  line-height: body;
  font-weight: normal;
  color: black60;
  font-family: sans;
  padding: 0;
  margin-top: 10px;
}

.c1 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .title,
.c1 .title a {
  font-style: italic;
}

.c4 .c2 {
  margin-right: 0;
  color: inherit;
}

.c4 .c2::after {
  content: ", ";
}

@media (min-width:) {
  .c1 {
    font-size: size3;
    line-height: body;
    font-weight: normal;
    color: black60;
    font-family: sans;
  }
}

@media (max-width:600px) {
  .c1 {
    padding: 0 10px;
  }
}

<div
  className="c0"
  color="black60"
>
  <div
    className="c1"
    color="black60"
    fontFamily="sans"
  >
    <strong
      className="c2 c3"
    >
      <span
        className="name"
      >
        Fernando Botero
      </span>
    </strong>
    <div>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span><span class=\\"title\\">Nude on the Beach</span><span>, </span><span class=\\"date\\">2000</span></span>",
          }
        }
      />
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span>Gary Nader<span>. </span><span class=\\"credit\\">Courtesy of Gary Nader</span></span>",
          }
        }
      />
    </div>
    <div />
  </div>
</div>
`;
